--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,4 +16,4 @@ workflows:
         script: |
           flutter build apk --release --no-shrink
     artifacts:
-      - build/app/outputs/flutter-apk/app-release.apk
+      - build/**/app-release.apk
